--- a/src/components/Coffe/Coffe.css
+++ b/src/components/Coffe/Coffe.css
@@ -33,11 +33,20 @@ align-items: center;
     display: flex;
     width: 300px;
     justify-content: space-between;
+    color: white;
 }
+.cofe2>p{
+    color: #E4B95B;
 
+}
 
 .huina{
     width: 300px;
     color: white;
     display: flex;
 }
+
+.img_disk>img{
+    width: 100px;
+}
+
