--- a/src/components/Best/Best.css
+++ b/src/components/Best/Best.css
@@ -1,6 +1,6 @@
 .container_Best {
   background-color: white;
-  height: 200px;
+  height: 150px;
   justify-content: center;
   max-width: 85%;
   margin: 0 auto;
@@ -20,7 +20,7 @@
 }
 .img_ren_2{
     margin-top: -150px;
-    margin-left: 540px;
+    /* margin-left: 540px; */
 }
 .img_ren_2 > img {
   width: 181px;
@@ -38,4 +38,5 @@
 .rentagle_test_second img{
   width: 819px;
   height: 486px ;
+  border-radius: 50px;
 }
