--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,31 +1,34 @@
 .container_Card {
-  max-height: 250px;
-  height: 100%;
-  /* margin: 0 auto; */
-  color: white;
+  max-width: 1600px;
+  width: 100%;
+  height: 500px;
+  max-height: 350px;
+}
 
+.card {
+  margin-top: 101px;
 }
-@media (max-with:1600px){
-  .container{
-    max-width: 991px;
-  }
-}
-.card_home {
+.flavor {
   margin: 0 auto;
-    display: flex;
-  justify-content: space-between;
-  justify-content: center;
-  margin-top: 164px;
+  width: 85%;
+  display: flex;
+  justify-content: space-around;
 }
-.card_1 {
-  width: 750px;
-  height: 464px;
-  margin-left: 80px;
+
+.flavor > img {
+  width: 650px;
+  height: 430px;
+}
 
 
+.kera {
+    max-width: 85%;
+    margin: 0 auto;
+    margin-top: -110px;
+    margin-left: 130px;
 }
-.card_1 >h1{
-  font-family: 'Quicksand';
+.kera > h1 {
+    font-family: 'Quicksand';
 font-style: normal;
 font-weight: 700;
 font-size: 30px;
@@ -33,77 +36,60 @@ line-height: 38px;
 display: flex;
 align-items: center;
 text-align: center;
-margin-top: -120px;
-margin-left:50px ;
+
 color: #FFFFFF;
 
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
-.card_1 > img {
-  margin-top: -100px;
-  width: 100%;
-  height: 100%;
-  border-radius: 50px;
-}
-.h1_img {
-  font-family: "Quicksand";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 38px;
-  display: flex;
-  align-items: center;
-  text-align: center;
 
-  color: #ffffff;
+.kera>Button{
+    margin-top: 10px;
+    border-radius: 20px;
+    width: 150px;
+}
 
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
-}
-.card_1 >Button{
-  border-radius: 20px;
-  width: 170px;
-  margin-left: 50px;
-}
-.card__1{
-  margin-left: 50px;
 
+.off >img{
+    width: 325px;
+    height: 190px;
+    margin-left: 50px;
 }
-.card_2 {
-  width: 360px;
-  height: 210px;
-  margin-top: -80px;
-}
-.card_2>h1{
-  font-family: 'Quicksand';
+
+
+
+.twinty>h1{
+    font-family: 'Quicksand';
 font-style: normal;
 font-weight: 700;
 font-size: 20px;
-margin-top: -60px;
-margin-left: 30px;
 line-height: 38px;
 display: flex;
 align-items: center;
-z-index: 43;
 text-align: center;
-color: #ffffff;
+margin-top: -50px;
+margin-left: 80px;
+color: #FFFFFF;
 }
-.card_2 > img {
-  margin-top: -20px;
-  width: 100%;
-  height: 100%;
+
+.creat{ 
+    height: 190px;
+    width: 325px;
+    margin-top: 50px;
+
+
 }
-.eplise{
-   width: 10px;
-   margin-top: -40px;
-   z-index: -2x;
-   margin-left: 138px;
+
+
+.enjo{
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+color: #FFFFFF;
+font-size: 15px;
+margin-left: 80px;
+margin-top: -65px;
 }
-.card_3{
-  margin-top: 25px;
-  width: 360px;
-  height: 210px;
-}
-.card_3> img{
-  width: 100%;
-  height: 100%;
+
+.enjoy >Button{
+    margin-left: 80px;
+    border-radius: 20px;
+
 }
