--- a/src/components/Diskovery/Diskovery.css
+++ b/src/components/Diskovery/Diskovery.css
@@ -24,27 +24,27 @@
   font-style: normal;
   font-weight: 700;
   font-size: 55px;
+  padding: 55px;
   line-height: 69px;
   text-align: center;
-
   color: #e4b95b;
 }
 
 .Diskovery_title > p {
     text-align: center;
-    margin-top: 20px;
 }
 
 
 .Menu_coffees{
+  padding: 50px;
     max-width: 1200px;
     height: 600px;
-    margin: 30px auto;
-    border: 1px solid white;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
-
-.rentagle>img{
-  width: 819px;
-height: 486px;
+.btn_disk>Button{
+  border-radius: 20px;
+  color: #f3a600;
 }
